@@ -12,10 +12,16 @@ BeautifulSoup = 3.2.1
 decorator = 3.4.0
 gocept.cache = 0.5.2
 gocept.collmex = 1.3
+ipython = 1.1.0
+jira-python = 0.13
 lxml = 3.2.1
 mechanize = 0.2.5
+oauthlib = 0.6.0
 pytz = 2013b
+requests = 1.2.3
+requests-oauthlib = 0.3.3
 setuptools = 0.9.5
+tlslite = 0.4.1
 transaction = 1.4.1
 zc.buildout = 2.2.0
 zc.recipe.egg = 2.0.0
