@@ -522,6 +522,7 @@ class Settings(object):
     hours_password = ''
 
     redmines = []
+    jiras = []
 
     def _config(self):
         config = ConfigParser.RawConfigParser()
@@ -594,6 +595,13 @@ class Settings(object):
                 redmine['url'] = redmine['url'][:-1]
             redmine['projects'] = redmine['projects'].split()
             self.redmines.append(redmine)
+
+        for section in config.sections():
+            if not section.startswith('jira'):
+                continue
+            jira = dict(config.items(section))
+            jira['projects'] = jira['projects'].split()
+            self.jiras.append(jira)
 
     def save(self, filename):
         config = self._config()
